--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./stylesheet.css" />
   </head>
   <body>
     <header>
-      <section>
-        <a href=""><strong>Web</strong>Studio</a>
-      </section>
       <nav>
+        <section>
+          <a href="./index.html">WebStudio</a>
+        </section>
         <ul>
           <li>
             <a href="#Studio">Studio</a>
@@ -28,8 +29,6 @@
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-        </ul>
-        <ul>
           <li>
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
@@ -95,13 +94,13 @@
               alt="Mark Guerrero"
               width="264"
             />
-            <p><strong>Mark Guerrero</strong></p>
+            <h3><strong>Mark Guerrero</strong></h3>
             <p>Product Designer</p>
           </li>
 
           <li>
             <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" />
-            <p><strong>Tom Ford</strong></p>
+            <h3><strong>Tom Ford</strong></h3>
             <p>Frontend Developer</p>
           </li>
 
@@ -111,7 +110,7 @@
               alt="Camila Garcia"
               width="264"
             />
-            <p><strong>Camila Garcia</strong></p>
+            <h3><strong>Camila Garcia</strong></h3>
             <p>Marketing</p>
           </li>
 
@@ -121,7 +120,7 @@
               alt="Daniel Wilson"
               width="264"
             />
-            <p><strong>Daniel Wilson</strong></p>
+            <h3><strong>Daniel Wilson</strong></h3>
             <p>UI Designer</p>
           </li>
         </ul>
