--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./stylesheet.css" />
+    <!-- <link rel="stylesheet" href="./stylesheet.css" /> -->
   </head>
   <body>
     <header>
       <nav>
-        <section>
-          <a href="./index.html">WebStudio</a>
-        </section>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="#Studio">Studio</a>
@@ -94,13 +92,13 @@
               alt="Mark Guerrero"
               width="264"
             />
-            <h3><strong>Mark Guerrero</strong></h3>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
             <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" />
-            <h3><strong>Tom Ford</strong></h3>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
@@ -110,7 +108,7 @@
               alt="Camila Garcia"
               width="264"
             />
-            <h3><strong>Camila Garcia</strong></h3>
+            <h3>Camila Garcia></h3>
             <p>Marketing</p>
           </li>
 
@@ -120,7 +118,7 @@
               alt="Daniel Wilson"
               width="264"
             />
-            <h3><strong>Daniel Wilson</strong></h3>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -129,9 +127,7 @@
     </main>
 
     <footer>
-      <a href=""
-        ><p><strong>Web</strong>Studio</p></a
-      >
+      <a href="./index.html"><p>WebStudio</p></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
