--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               alt="Camila Garcia"
               width="264"
             />
-            <h3>Camila Garcia></h3>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
@@ -127,7 +127,7 @@
     </main>
 
     <footer>
-      <a href="./index.html"><p>WebStudio</p></a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
